- Renamed PasswordReset component to ForgotPassword - Created notifications inside ForgotPassword component with Mantine - Fixed spacing issues in ForgotPassword component

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 
 .App {
   text-align: center;
-  background: #23242a;
 }
 
 .App-logo {
